# Dao-PCB-Design-Agent

./: .gitignore  HANDOFF.md  README.md  _AGENT_GUIDE.md  _CURSOR_FOR_PCB.md  _DESIGN_LOOP_REPORT.md  _DESIGN_SURVEY.md  _INDEX.md  _KICAD_NATIVE_ARCHITECTURE.md  _verify_all.py  bench_engine.py  bench_stress.py  pyproject.toml  反者道之动_诚实oracle与双层布线_底层分析.md  预测编码重构_底层分析与架构.md
dao_kicad/: ARCHITECTURE.md  README.md  REAL_DEMO_SCOREBOARD.md  practice.py  pyproject.toml  scoreboard.py  verify_all.py
dao_kicad/bridge/: __init__.py  remote.py
dao_kicad/core/: __init__.py  analyzer.py  auto_designer.py  auto_place.py  drc.py  drc_analyzer.py  drc_optimizer.py  electrical.py  export.py  highspeed.py  introspect.py  length_match.py  manipulate.py  netclass.py  netlist_driven.py  placement.py  router.py  schematic.py  sexpr.py  stackup.py  wisdom.py
dao_kicad/daokicad/: __init__.py  _pcbworker.py  adapters.py  agent.py  cli.py  commands.py  dna.py  env.py  fplib.py  ipc.py  live.py  netlist.py  registry.py  reverse.py  route.py
dao_kicad/daokicad/fusion/: __init__.py  actions.py  agent.py  capabilities.py  client.py  exports.py  units.py
dao_kicad/daokicad/kicad_plugin/: __init__.py  dao_action_plugin.py  install.py  liveboard.py  panel.py
dao_kicad/engine/: __init__.py  adaptive.py  workflow.py
dao_kicad/examples/: design_one.py
dao_kicad/net/: __init__.py  library_manager.py  search.py
dao_kicad/tests/: test_ai_ide.py  test_analyzer.py  test_dao_devin.py  test_dao_duino.py  test_dao_platform.py  test_daokicad.py  test_drc.py  test_electrical.py  test_engine.py  test_export.py  test_fplib.py  test_fusion.py  test_highspeed.py  test_introspect.py  test_layer_budget.py  test_manipulate.py  test_multilayer_router.py  test_native_arc.py  test_native_assembly.py  test_native_audit.py  test_native_bigboard.py  test_native_bom.py  test_native_build.py  test_native_catalog.py  test_native_courtyard.py  test_native_diff.py  test_native_dimension.py  test_native_fiducial.py  test_native_flow.py  test_native_graphic.py  test_native_group.py  test_native_heal.py  test_native_keepout.py  test_native_lib.py  test_native_libscan.py  test_native_live.py  test_native_mask.py  test_native_netclass.py  test_native_netlist.py  test_native_ops.py  (+21 more)
dao_kicad/tools/: install_freerouting.py
docs/: 线上资源参考.md  (+26 more)
(+310 files in other folders)
