[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dao-pcb-design-agent"
version = "1.0.0"
description = "PCB Design Agent - KiCad Origin + PCB Brain + 21 DNA Templates + 16 MCP Tools"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.optional-dependencies]
# KiCad 9 IPC API client imports as `kipy`; PyPI package is `kicad-python`.
# protobuf pinned to match kipy gencode; pywinauto is Windows-only (GUI 兜底).
live = [
    "kicad-python>=0.4",
    "protobuf>=5.29.6,<8",
    "pywinauto; sys_platform == 'win32'",
]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
include = ["kicad_origin*", "pcb_brain*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
